# halo2ecc-s

./: Cargo.toml  LICENSE  README.md
src/: assign.rs  context.rs  lib.rs  range_info.rs  utils.rs
src/circuit/: base_chip.rs  bls12_381_pairing_chip.rs  bn256_constants.rs  bn256_pairing_chip.rs  ecc_chip.rs  fq12.rs  general_scalar_ecc_chip.rs  general_scalar_pairing_chip.rs  integer_chip.rs  keccak_chip.rs  mod.rs  native_ecc_chip.rs  native_scalar_ecc_chip.rs  native_scalar_pairing_chip.rs  pairing_chip.rs  range_chip.rs  range_chip_small.rs  select_chip.rs
src/gate/: base_chip.rs  mod.rs  range_chip.rs
src/tests/: base_chip.rs  general_scalar_ecc_chip.rs  general_scalar_pairing_chip.rs  integer_chip.rs  keccak_chip.rs  mod.rs  native_ecc_chip.rs  native_scalar_ecc_chip.rs  native_scalar_pairing_chip.rs  range_chip.rs
